--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "version":2,
     "public": true,
-    "build":[{
+    "build":{
         "src": "./src/app.js",
         "use":"@vercel/node"
-    }],
+    },
     "routes":[
         {
         "src":"/(.*)",
