--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version":2,
     "public": true,
     "build":{
-        "src": "app.js",
+        "src": "./src/app.js",
         "use":"@vercel/node"
     },
     "routes":[
